Allow tunefs to include '_' as a legal character in label names to make it consistent with newfs. Document the legality of '_' in label names in both tunefs(8) and newfs(8).

PR:           235182
Submitted by: darius@dons.net.au
Reviewed by:  Conrad Meyer
MFC after:    3 days
Sponsored by: Netflix


git-svn-id: svn+ssh://svn.freebsd.org/base/head@343449 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f