sbin/tunefs/tunefs.c
@@ -189,7 +189,7 @@ main(int argc, char *argv[])
 			name = "volume label";
 			Lvalue = optarg;
 			i = -1;
-			while (isalnum(Lvalue[++i]));
+			while (isalnum(Lvalue[++i]) || Lvalue[i] == '_');
 			if (Lvalue[i] != '\0') {
 				errx(10,
 				"bad %s. Valid characters are alphanumerics.",
